--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site settings
-title: Andrej Karpathy blog
-email: 
+title: Yihui He blog
+email: yihuihe@foxmail.com
 description: "Musings of a Computer Scientist."
 baseurl: ""
-url: "http://karpathy.github.io"
-twitter_username: karpathy
-github_username:  karpathy
+url: "http://yihui-he.github.io"
+blogurl: "http://yihui-he.github.io/blog"
+#twitter_username: karpathy
+github_username:  yihui-he
 
 # Build settings
 markdown: kramdown
